<resources>
    <string name="app_name">Gimnasio</string>
    <string name="elegirEj">Elegir Ejercicio</string>
    <string name="add">+</string>
    <string name="siguiente">Siguiente</string>
    <string name="rpe">RPE</string>
    <string name="kg">Kg</string>
    <string name="sets">Sets</string>
    <string name="set">Set</string>
    <string name="reps">Reps</string>
    <string name="mods">Modificadores</string>
    <string name="notas">Notas</string>
    <string name="fecha">Fecha</string>
    <string name="info">"?"</string>
    <string name="nombre">Nombre</string>
    <string name="movimiento">Tipo Movimiento</string>
    <string name="equipo">Equipo</string>
    <string name="fin">Finalizar</string>
    <string name="last">Último</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="deleteAll">Borrar Todo</string>
    <string name="editarBorrar">Quieres editar o borrar?</string>
    <string name="nombreUnico">El nombre tiene que ser único para el ejercicio (no puede estar repetido)</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="descanso_header">Descanso</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>