<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/descanso_header">
        <SwitchPreference
            app:defaultValue="true"
            app:key="zen"
            app:summary="Activa/Desactiva el temporizador"
            app:title="Zen" />

        <EditTextPreference
            app:defaultValue="90"
            app:key="segundos"
            app:summary="Cuantos segundos dura el descanso"
            app:title="Descanso" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="alarma"
            app:summary="Activa/Desactiva alarma"
            app:title="Alarma" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>