<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E35252"
    tools:context=".ui.UpdateDeleteActivity">

<TextView
    android:id="@+id/ejercicioNombre"
    android:layout_width="151dp"
    android:layout_height="49dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="40dp"
    android:background="#BAB7B7"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tiempo"
    android:layout_width="151dp"
    android:layout_height="49dp"
    android:layout_marginStart="48dp"
    android:layout_marginTop="40dp"
    android:background="#BAB7B7"
    app:layout_constraintStart_toEndOf="@+id/ejercicioNombre"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/etKilos"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="204dp"
    android:background="#BAB7B7"
    android:ems="10"
    android:inputType="numberDecimal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tvKg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:text="@string/kg"
    app:layout_constraintBottom_toTopOf="@+id/etKilos"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tvRPE"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginBottom="12dp"
    android:gravity="center_vertical"
    android:text="@string/rpe"
    app:layout_constraintBottom_toTopOf="@+id/seekBarRpe"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tvSets"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:text="@string/set"
    app:layout_constraintBottom_toTopOf="@+id/tvSet"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tvReps"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="132dp"
    android:text="@string/reps"
    app:layout_constraintBottom_toTopOf="@+id/etReps"
    app:layout_constraintStart_toStartOf="parent" />

<EditText
    android:id="@+id/etReps"
    android:layout_width="49dp"
    android:layout_height="49dp"
    android:layout_marginStart="132dp"
    android:layout_marginTop="120dp"
    android:background="#BAB7B7"
    android:ems="10"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/etNotas"
    android:layout_width="346dp"
    android:layout_height="71dp"
    android:layout_marginStart="28dp"
    android:layout_marginBottom="148dp"
    android:background="#BAB7B7"
    android:ems="10"
    android:gravity="start|top"
    android:inputType="textMultiLine"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tvNotas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginBottom="16dp"
    android:text="@string/notas"
    app:layout_constraintBottom_toTopOf="@+id/etNotas"
    app:layout_constraintStart_toStartOf="parent" />

<Spinner
    android:id="@+id/spinnerMods"
    android:layout_width="147dp"
    android:layout_height="49dp"
    android:layout_marginTop="120dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tvMods"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="88dp"
    android:text="@string/mods"
    app:layout_constraintBottom_toTopOf="@+id/spinnerMods"
    app:layout_constraintEnd_toEndOf="parent" />

<SeekBar
    android:id="@+id/seekBarRpe"
    style="@style/Widget.AppCompat.SeekBar.Discrete"
    android:layout_width="306dp"
    android:layout_height="32dp"
    android:layout_marginStart="48dp"
    android:layout_marginBottom="92dp"
    android:max="6"
    android:progress="1"
    android:progressTint="#FFD54F"
    android:rotation="0"
    app:layout_constraintBottom_toTopOf="@+id/tvNotas"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tvSet"
    android:layout_width="49dp"
    android:layout_height="49dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="120dp"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/btnDel"
    android:layout_width="131dp"
    android:layout_height="69dp"
    android:layout_marginBottom="32dp"
    android:onClick="borrar"
    android:text="@string/delete"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintStart_toStartOf="parent" />

<Button
    android:id="@+id/btnEdit"
    android:layout_width="131dp"
    android:layout_height="69dp"
    android:layout_marginBottom="32dp"
    android:onClick="editar"
    android:text="@string/edit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.885"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>